# aria-scraper

./: .gitignore  CLAUDE.md  README.md  assemble_documents.py  batch_run.py  build_drug_index.py  chunk_documents.py  classify_pages.py  diagnostics.py  embed_and_store.py  extract_image_pages.py  extract_text_pages.py  main.py  peek_chunks.py  pyproject.toml  query.py  retrieve.py  scrape_aria_memos.py
deprecated/: assemble_documents.py  classify_pages.py  extract_image_pages.py  extract_text_pages.py  test_ocr_comparison.py  test_ocr_comparison_v2.py
